@@ -67,7 +67,7 @@
     <exportLayoutBorderCrossSize>0</exportLayoutBorderCrossSize>
   </Layout>
   <Layout combineReferences="false" width="600" height="600" buffer="0" Name="Formatted Text Margins" defaultCount="1" dpi="300" drawBorder="true">
-    <Element variable="&lt;marginleft=30;150;350&gt;&lt;marginright=200;0;50&gt;&lt;marginright=150;50;80&gt;&lt;marginright=200;250;300&gt;&lt;marginright=250;300;350&gt;&lt;b&gt;TITLE&lt;/b&gt;&lt;br&gt;This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text." type="FormattedText" x="61" y="100" width="490" height="352" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="0" verticalalign="0" opacity="255" tilesize="" lineheight="18" wordspace="0" justifiedtext="false" name="FormattedText" font="Arial;12;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x00000000" enabled="true" outlinecolor="0x000000FF" />
+    <Element variable="&lt;marginleft=30;150;350&gt;&lt;marginright=200;0;50&gt;&lt;marginright=150;50;80&gt;&lt;marginright=200;250;300&gt;&lt;marginright=250;300;350&gt;&lt;b&gt;TITLE&lt;/b&gt;&lt;br&gt;This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and lines and lines to test wrapping at different columns / x values. This is a lot of text. It will continue for lines and &lt;img=images\gear.png&gt; lines and lines to test wrapping at different columns.&lt;br&gt;&lt;img=images\gear.png&gt;Some more text to end it." type="FormattedText" x="61" y="100" width="490" height="352" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="0" verticalalign="0" opacity="255" tilesize="" lineheight="18" wordspace="0" justifiedtext="false" name="FormattedText" font="Arial;12;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x00000000" enabled="true" outlinecolor="0x000000FF" />
     <Element variable="" type="Text" x="351" y="99" width="200" height="50" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="0" verticalalign="0" opacity="255" tilesize="" lineheight="14" wordspace="0" justifiedtext="false" name="ShapeUpperRight2" font="Arial;12;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x0003FFFF" enabled="true" outlinecolor="0x000000FF" />
     <Element variable="" type="Text" x="401" y="99" width="150" height="80" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="0" verticalalign="0" opacity="255" tilesize="" lineheight="14" wordspace="0" justifiedtext="false" name="ShapeUpperRight1" font="Arial;12;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0xFFFC00FF" enabled="true" outlinecolor="0x000000FF" />
     <Element variable="" type="Text" x="301" y="402" width="250" height="50" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="0" verticalalign="0" opacity="255" tilesize="" lineheight="14" wordspace="0" justifiedtext="false" name="ShapeLowerRight2" font="Arial;12;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x0FFF00FF" enabled="true" outlinecolor="0x000000FF" />
