@@ -1,6 +1,7 @@
 Card Maker Version History
 --------------------------
 1.2.0.0
+- Added FormattedText marginleft and marginright tags.
 - Fixed issue with page resizing/margins on PDF export
 - Added * option for allowed layout column to indicate the row should be included in all layouts
 - Added ability to preview color changes in the color selection dialog. This works with 1+ elements selected.
